--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "devDependencies": {
     "@bahmutov/print-env": "1.3.0",
     "@stylistic/eslint-plugin-js": "2.6.5",
+    "@testing-library/cypress": "10.0.2",
     "cypress": "13.15.0",
     "eslint": "9.9.1",
     "eslint-plugin-cypress": "3.5.0",
